@@ -313,6 +313,14 @@
             </tbody>
           </table>
           </dd></dt>
+        <dt><code>batchSize</code> (default - <code>0</code> for SQL Server;
+          <code>1000</code> for Sybase)</dt>
+        <dd>Controls how many statements are sent to the server in a batch.
+          The actual batch is broken up into pieces this large that are sent
+          separately. The reason for this is to avoid Sybase "hangs" caused by
+          running out of space with very large batches. The problem doesn't
+          seem to occur with SQL Server, hence the default limit of 0
+          (unlimited) in this case.</dd>
       </dl>
       <p>These properties can be passed to jTDS in one of three ways: in the URL, in
         the <code>Properties</code> object passed to <code>getConnection()</code>
@@ -537,12 +545,14 @@
       <p class="question"><a name="batchProcessing"></a>Batch processing
         using executeBatch() hangs or is unreliable on Sybase.</p>
       <p>When executing large batches on Sybase the client application may
-        hang or the response time may vary considerably. Firstly, the client
-        may be suspended if the system log fills so check that the log space
-        is sufficient for the batch you are trying to load. Secondly, try to
-        use reasonable batch sizes, for example &lt;= 5000 statements, and
-        execute each batch in a transaction (i.e. with auto commit set to
-        false).</p>
+        hang or the response time may vary considerably. The client may be
+        suspended if the system log fills so check that the log space is
+        sufficient for the batch you are trying to load. You can control the
+        real batch size using the <code>batchSize</code> parameter; setting it
+        to a non-zero value will break up batches into smaller pieces on
+        execution, hopefully avoiding the problem.
+      <p>It is also recommended that you execute each batch in a transaction
+        (i.e. with auto commit set to false).
       <p><a href="#">^ top ^</a></p>
 
       <p class="title">Incorrect Behavior</p>
