@@ -1,4 +1,5 @@
 prop.appname=APPNAME
+prop.batchsize=BATCHSIZE
 prop.charset=CHARSET
 prop.databasename=DATABASENAME
 prop.domain=DOMAIN
@@ -26,6 +27,7 @@ prop.useunicode=SENDSTRINGPARAMETERSASUNICODE
 prop.xaemulation=XAEMULATION
 
 prop.desc.appname=The application name advertised by the driver.
+prop.desc.batchsize=The number of statements to submit at once. Batches are broken up in pieces this large.
 prop.desc.charset=Server character set for non-Unicode character values.
 prop.desc.databasename=The database name.
 prop.desc.domain=The domain used for authentication.
